Bug 1962617 - Use snapshot containing block size for root when capturing the old/new states. r=view-transitions-reviewers,emilio

It seems we forgot to use the size of snapshot containing block when
capturing the root element. Refactor the code a little bit to make sure
we do the check every time.

Differential Revision: https://phabricator.services.mozilla.com/D247514